# income-app

./: Cargo.toml  README.md  build.rs  resources.gresource.xml
src/: main.rs
ui/: appwindow.slint
