[package]
name = "income-app"
version = "0.1.0"
authors = ["iamefe <efeativie@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Desktop app that divides up income into tax, owner, profit, and opex amounts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "income breakdown application"
identifier = "io.github.iamefe.income-app"
description = "Desktop app that divides up income into tax, owner, profit, and opex amounts."
icon = ["icon.png", "icon@2x.png"]

